# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

### Added

- Method AbstractHttpData->getData()

## 0.0.3

### Removed

- Version information from composer.json

## 0.0.2

### Added

- xx.xx syntax for post data validation
- License information
- Changelog