@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Added
 
+- Method AbstractHttpData->requireOne()
 - Method AbstractHttpData->getData()
 
 ## 0.0.3
